HU003 - Funcionalidade: Autenticação - Criação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.h2.console.path=/h2-console
 server.port=8084
 
 spring.mvc.pathmatch.matching-strategy: ant-path-matcher
+
+#Auth
+jwt.secret=usersecretforjwtauthenticate12871812hegyfg3y#$%#@FRTG##5rgbjmvg
